--- a/index.html
+++ b/index.html
@@ -64,5 +64,9 @@
     </ul>
     <hr/>
     <a href="./OtherWebs/hobbies.html">My Hobbies</a> <a href="./OtherWebs/contacts.html">Contact Me📞</a>
+    
 </body>
+<footer>
+    <p>© Somnotho Mzolo. All Rights Reserved.</p>
+</footer>
 </html>
