--- a/OtherWebs/contacts.html
+++ b/OtherWebs/contacts.html
@@ -1,4 +1,12 @@
-<h1>Contact Me</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Contacts</title>
+</head>
+<body>
+  <h1>Contact Me</h1>
 <hr/>
 <p>Tel: +27 81 707 3655</p>
 <p>Email: somnothomzolo06@gmail.com</p>
@@ -9,3 +17,5 @@
   Johannesburg<br />
   South Africa <br />
 </p>
+</body>
+</html>
