--- a/OtherWebs/hobbies.html
+++ b/OtherWebs/hobbies.html
@@ -1,9 +1,19 @@
-<h1>My Hobbies</h1>
-<ol>
-    <li>Gaming</li>
-    <li>Reading</li>
-    <li>Watching Movies</li>
-    <li>Walking outside</li>
-    <li>Coding</li>
-</ol>
-<hr>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <h1>My Hobbies</h1>
+    <ol>
+        <li>Gaming</li>
+        <li>Reading</li>
+        <li>Watching Movies</li>
+        <li>Walking outside</li>
+        <li>Coding</li>
+    </ol>
+    <hr>
+</body>
+</html>
